# a-roma

./: .cursorrules  .gitignore  ABOUT.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  aroma-software.service  gen_icons.sh  main.py  pyproject.toml
cad/2d/: Italiatron-early-sizing-exercise-round.ai  Italiatron-early-sizing-exercise.ai
src/aroma_software/: __init__.py  api.py  event_system.py  fan_controller.py  logger_setup.py  music_controller.py
static/: aroma.html  aroma_escalate.html  site.webmanifest
